# VideoGenerator

./: CMakeLists.txt
include/: Config.h.in
src/: main.cpp
